--- a/music/index.html
+++ b/music/index.html
@@ -3,10 +3,10 @@
 
   <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="genericons-neue-master/icon-font/Genericons-Neue.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../genericons-neue-master/icon-font/Genericons-Neue.min.css">
 
 
     <style>
@@ -23,11 +23,13 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-lg-2 col-sm-3 col-xs-3">
-        	<img class="keypz-logo" src="img/keypz-logo.png">
+        	<a href="/">
+                <img class="keypz-logo" src="../img/keypz-logo.png">
+            </a>
         </div>
         <div class="col-lg-3 col-sm-3 col-xs-3 head-pad">
         	<ul class="nav nav-pills nav-justified">
-        		<li role="presentation"><a href="/music">Music</a></li>
+        		<li role="presentation"><a class="active" href="/music">Music</a></li>
         		<li role="presentation"><a href="/sports">Sports</a></li>
         		<li role="presentation"><a href="/theatre">Theatre</a></li>
 			</ul>
@@ -47,7 +49,7 @@
     <div class="container head-pad">
       <div class="row">
         <div class="col-md-12">
-        	<h1><span class="red">Tickets — No Queues, No touts, No Fuss.</span><br>You're welcome! Touts Aren't.</h1>
+        	<h1><span class="red">Music</h1>
         </div>
       </div>
     </div>
@@ -106,66 +108,12 @@
         </div>
       </div>
     </div>
-    
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="col-md-12">
-        <div id='events-panel' class="panel panel-primary">
-          <div class="panel-heading">
-            <h2 class="panel-title">Sport</h3>
-          </div>
-          <div class="panel-body">
-            <div id="sport-events" class="list-group">
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Event title</h4>
-                <p class="list-group-item-text">...</p>
-                <p class="venue"></p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Event title</h4>
-                <p class="list-group-item-text"></p>
-                <p class="venue"></p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Event title</h4>
-                <p class="list-group-item-text">...</p>
-                <p class="venue"></p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Event title</h4>
-                <p class="list-group-item-text">...</p>
-                <p class="venue"></p>
-              </a>
-            </div>
-          </div>
-          <div class="panel-footer">
-            <nav>
-              <ul class="pager">
-                <li id="prev" class="sport previous"><span aria-hidden="true">&larr;</span></li>
-                <li id="next" class="sport next"><span aria-hidden="true">&rarr;</span></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        
-        <div id='attraction-panel' class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Attraction</h3>
-          </div>
-          <div id="attraction" class="panel-body">
-            <h4 class="list-group-item-heading">Attraction title</h4>
-            <img class="col-xs-12" src="">
-            <p id="classification"></p>
-          </div>
-        </div>
-        </div>
-      </div>
-    </div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <!-- <script src="../js/script.js"></script> -->
   </body>
 
 </html>
