--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </div>
         <div class="col-lg-3 col-sm-3 col-xs-3 head-pad">
         	<ul class="nav nav-pills nav-justified">
-        		<li role="presentation"><a href="/music">Music</a></li>
-        		<li role="presentation"><a href="/sports">Sports</a></li>
-        		<li role="presentation"><a href="/theatre">Theatre</a></li>
+        		<li role="presentation"><a href="music.html">Music</a></li>
+        		<li role="presentation"><a href="sports.html">Sports</a></li>
+        		<li role="presentation"><a href="theatre.html">Theatre</a></li>
 			</ul>
         </div>
         <div class="col-lg-2 col-xs-1">
