--- a/music.html
+++ b/music.html
@@ -3,10 +3,10 @@
 
   <head>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../genericons-neue-master/icon-font/Genericons-Neue.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="genericons-neue-master/icon-font/Genericons-Neue.min.css">
 
 
     <style>
@@ -23,15 +23,15 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-lg-2 col-sm-3 col-xs-3">
-        	<a href="/">
-                <img class="keypz-logo" src="../img/keypz-logo.png">
+        	<a href="index.html"></a>
+                <img class="keypz-logo" src="img/keypz-logo.png">
             </a>
         </div>
         <div class="col-lg-3 col-sm-3 col-xs-3 head-pad">
         	<ul class="nav nav-pills nav-justified">
-        		<li role="presentation"><a class="active" href="/music">Music</a></li>
-        		<li role="presentation"><a href="/sports">Sports</a></li>
-        		<li role="presentation"><a href="/theatre">Theatre</a></li>
+        		<li role="presentation"><a class="active" href="music.html">Music</a></li>
+        		<li role="presentation"><a href="sports.html">Sports</a></li>
+        		<li role="presentation"><a href="theatre.html">Theatre</a></li>
 			</ul>
         </div>
         <div class="col-lg-2 col-xs-1">
