--- a/music.html
+++ b/music.html
@@ -23,9 +23,9 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-lg-2 col-sm-3 col-xs-3">
-        	<a href="index.html"></a>
-                <img class="keypz-logo" src="img/keypz-logo.png">
-            </a>
+        	<a href="index.html">
+        		<img class="keypz-logo" src="img/keypz-logo.png">
+        	</a>
         </div>
         <div class="col-lg-3 col-sm-3 col-xs-3 head-pad">
         	<ul class="nav nav-pills nav-justified">
