--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col-md-12">
         <div id='events-panel' class="panel panel-primary">
           <div class="panel-heading">
-            <h2 class="panel-title">Music</h3>
+            <h2 class="panel-title"><span class="red">Music</span></h3>
           </div>
           <div class="panel-body">
             <div id="events" class="list-group">
@@ -114,7 +114,7 @@
         <div class="col-md-12">
         <div id='events-panel' class="panel panel-primary">
           <div class="panel-heading">
-            <h2 class="panel-title">Sport</h3>
+            <h2 class="panel-title"><span class="red">Sport</span></h3>
           </div>
           <div class="panel-body">
             <div id="sport-events" class="list-group">
