Content Changes for Attraction

--- a/index.html
+++ b/index.html
@@ -103,7 +103,30 @@
             			<h2 class="list-group-item-heading">Attraction title</h2>
             			<h4>Attraction Venue, Locale &middot; <span class="grey">Doors open at 00:00pm,<br>Curfew is at 00:00pm.</span></h4>
             			<p></p><br>
-            			<p class="list-group-item-desc"><strong>Information:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            			<table class="table table-striped">
+  							<tbody>
+    							<tr>
+      							<td><h4>Vendor Name</h4> £00.00 <span class="green">+ No Fees</span></td>
+      							<td><button type="button" class="btn btn-go">Go!</button></td>
+    							</tr>
+    							<tr>
+      							<td><h4>Vendor Name</h4> £00.00 <span class="green">+ No Fees</span></td>
+      							<td><button type="button" class="btn btn-go">Go!</button></td>
+    							</tr>
+    	    					<tr>
+      							<td><h4>Vendor Name</h4> £00.00 <span class="fees">+ Fees</span></td>
+      							<td><button type="button" class="btn btn-gone">Gone</button></td>
+    							</tr>
+    							<tr>
+      							<td><h4>Vendor Name</h4> £00.00 <span class="green">+ No Fees</span></td>
+      							<td><button type="button" class="btn btn-go">Go!</button></td>
+    							</tr>
+    	    					<tr>
+      							<td><h4>Vendor Name</h4> £00.00 <span class="fees">+ Fees</span></td>
+      							<td><button type="button" class="btn btn-gone">Gone</button></td>
+    							</tr>
+  							</tbody>
+						</table>
 						<p id="classification"></p><br>            		
             		</div>
             		<div class="col-md-6">
