Content Adjustments - Attractions

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             			<h2 class="list-group-item-heading">Attraction title</h2>
             			<h4>Attraction Venue, Locale &middot; <span class="grey">Doors open at 00:00pm,<br>Curfew is at 00:00pm.</span></h4>
             			<p></p><br>
+            			<h4><span class="red">Date Selected: 00/00/0000</span></h4><br>
             			<table class="table table-striped">
   							<tbody>
     							<tr>
@@ -127,7 +128,11 @@
     							</tr>
   							</tbody>
 						</table>
-						<p id="classification"></p><br>            		
+						<br>
+						<h4>Attraction Venue, <span class="grey">Event Address, Postcode</span></h4>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158857.72953521015!2d-0.24202463457569046!3d51.52877143146073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon!5e0!3m2!1sen!2suk!4v1513273078460" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<h4>Telephone:<span class="grey"> +01234 567890</span><br>Website:<span class="grey"> thevenue.com</h4><br>
+						<br><p class="please-note"><strong>Please Note:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
             		</div>
             		<div class="col-md-6">
             			<img class="img-resp" src="">
